--- a/app/src/main/res/layout/activity_prescription.xml
+++ b/app/src/main/res/layout/activity_prescription.xml
@@ -14,74 +14,100 @@ android:orientation="vertical"
         android:layout_height="wrap_content"
         android:id="@+id/toolbar"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        tools:context=".PrescriptionActivity">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+
             android:text="@string/doctor"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
 
-        <EditText
+        <TextView
             android:id="@+id/et_doctor_name"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="67dp"
-            android:layout_marginLeft="67dp"
-            android:ems="9"
-            android:hint="@string/please_enter_doctor_name"
-            android:inputType="textPersonName"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
+            android:hint="@string/please_enter_doctor_name"
+
+            />
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Client :"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/tv_patient_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/please_enter_doctor_name"
+
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Diagnosis :"
+        android:textSize="15dp"
+        android:textStyle="bold"
+         />
+
+    <AutoCompleteTextView
+        android:id="@+id/et_diagnosis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:completionThreshold="1"
+
+
+        android:ems="10"
+
+        android:hint="Please enter diagnosis"
+        android:inputType="textPersonName"
+        />
+
+    </LinearLayout>
+
+        <MultiAutoCompleteTextView
             android:id="@+id/et_prescription"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:completionThreshold="1"
 
 
             android:ems="10"
             android:gravity="start"
             android:hint="@string/enter_prescription"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_diagnosis" />
+            />
 
-        <EditText
-            android:id="@+id/et_diagnosis"
-            android:layout_width="298dp"
-            android:layout_height="wrap_content"
 
-            android:layout_marginTop="48dp"
-            android:ems="10"
 
-            android:hint="Please enter diagnosis"
-            android:inputType="textPersonName"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="@+id/et_doctor_name" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Diagnosis :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/et_prescription"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
