--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,14 +2,25 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+
+    <item
+       android:id="@+id/qr_code"
+        android:icon="@drawable/ic_qr_code"
+        android:title="QrCode"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/scan"
+        android:title="Scan"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_scan"
+        />
+
     <item
         android:id="@+id/logout"
         android:title="@string/logout"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/prescription"
-        android:icon="@android:drawable/ic_menu_agenda"
-        android:title="@string/prescription"
-        app:showAsAction="ifRoom" />
+
 
 </menu>
